# ReadBouncer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  ThreadPool.h  ThreadPool.hpp  config.toml  idea.cpp  last_version_main.cpp  main.cpp  main_test_bloomfilter.cpp  minimizer3.hpp
include/: bloomFilter.hpp  minimizer3.h
scripts/: RealMockDataSet.fasta  allReads.DeepNanoW48.fasta  create_RealZMC_gold_standard.py  getRunStats.py
scripts/HumanMicrobiome/: create360bpReads.py  map_reads.py
scripts/Rat_Mouse/: simulate_map_rattus_reads.py  splitNs.py
scripts/ZymoMockCommunity/: classify_ZMC_reads.py  create_RealZMC_gold_standard.py  create_SimulatedZMC.py  map_ZMC_reads.py
source/: CMakeLists.txt  bloomFilter.cpp  mhc.cpp
src/: CMakeLists.txt  debug_messages.hpp  main_omp.cpp
src/IBF/: CMakeLists.txt  IBF.hpp  IBFBuild.cpp  IBFClassify.cpp  IBFConfig.hpp  IBFExceptions.hpp
src/basecaller/: Basecaller.hpp  CMakeLists.txt
src/basecaller/DeepNano/: CMakeLists.txt  DeepNano2.h  DeepNanoBasecaller.cpp  DeepNanoBasecaller.hpp  deepnano2.lib
src/basecaller/Guppy/: CMakeLists.txt  CMakeLists.txt.in  GuppyBasecaller.cpp  GuppyBasecaller.hpp  GuppyCPPClient.hpp
src/config/: CMakeLists.txt  configReader.cpp  configReader.hpp
src/gui/: CMakeLists.txt  QDebugStream.h  Readme  callGUI.cpp  classify_mainwindow.cpp  classify_mainwindow.h  classify_mainwindow.ui  connection_test_mainwindow.cpp  connection_test_mainwindow.ui  ibf_mainwindow.cpp  ibf_mainwindow.h  ibf_mainwindow.ui  live_deplete_mainwindow.cpp  live_deplete_mainwindow.h  live_deplete_mainwindow.ui  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.qml
src/interfaces/: CMakeLists.txt  ont_read.cpp  ont_read.hpp  runner.hpp
src/libBaseCaller/: CMakeLists.txt  CMakeLists.txt.in  deepnano2.lib  mkl_core.lib  mkl_intel_lp64.lib  mkl_sequential.lib
src/libBloomFilter/: CMakeLists.txt  bloomFilter.cpp  bloomFilter.hpp  bloomFilterException.hpp  bloom_filter.hpp  customBloomFilter.cpp  customBloomFilter.hpp
src/libIBF/: CMakeLists.txt  Config.hpp  IBF.hpp  IBFBuild.cpp  IBFBuild.hpp  IBFClassify.cpp  IBFClassify.hpp  IBFConfig.hpp  IBFDeplete.cpp  SafeQueue.hpp
src/libMinimizer/: CMakeLists.txt  minimizer3.cpp  minimizer3.hpp
src/libReadUntil/: Acquisition.cpp  Acquisition.hpp  Analysis_Configuration.cpp  Analysis_Configuration.hpp  CMakeLists.txt  CMakeLists.txt.in  CMakeLists.txt.in.old  CMakeLists.txt.old  Data.cpp  Data.hpp  DataServiceException.hpp  Device.cpp  Device.hpp  DeviceServiceException.hpp  Instance.cpp  Instance.hpp  Manager.cpp  Manager.hpp  MinKnowService.hpp  MinKnowServiceType.hpp  ReadUntilClient.cpp  ReadUntilClient.hpp  ReadUntilClientException.hpp  SafeQueue.hpp  StopClock.hpp
src/lyra/: CMakeLists.txt  CMakeLists.txt.in
src/main/: CMakeLists.txt  QDebugStream.h  TODO.txt  adaptive_sampling.hpp  classify.hpp  classify_mainwindow.cpp  classify_mainwindow.h  classify_mainwindow.ui  connection_test.hpp  connection_test_mainwindow.cpp  connection_test_mainwindow.h  connection_test_mainwindow.ui  depletion.hpp  depletionQt.hpp  gtestExamples.hpp  guiButtons.hpp  ibf_mainwindow.cpp  ibf_mainwindow.h  ibf_mainwindow.ui  ibfbuild.hpp  live_deplete_mainwindow.cpp  live_deplete_mainwindow.h  live_deplete_mainwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mhc.cpp  parser.hpp  pics.qrc
src/main/pics/: readme.txt
src/main/ui/: TODO.txt  classify_mainwindow.cpp  classify_mainwindow.h  classify_mainwindow.ui  connection_test_mainwindow.cpp  connection_test_mainwindow.h  connection_test_mainwindow.ui  ibf_mainwindow.cpp  ibf_mainwindow.h  ibf_mainwindow.ui  ibfbuild.hpp  live_deplete_mainwindow.cpp  live_deplete_mainwindow.h  live_deplete_mainwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/minknow/: Acquisition.cpp  Acquisition.hpp  Analysis_Configuration.hpp  CMakeLists.txt  CMakeLists.txt.in  Data.cpp  Data.hpp  DataServiceException.hpp  Device.hpp  Instance.cpp  Instance.hpp  Manager.cpp  Manager.hpp  MinKnowService.hpp  ReadUntilClient.cpp  ReadUntilClient.hpp  ReadUntilClientException.hpp
src/seqan/: CMakeLists.txt  CMakeLists.txt.in
src/spdlog/: CMakeLists.txt  CMakeLists.txt.in
src/test/: CMakeLists.txt  CMakeLists.txt.in  test_toml_file.toml
src/test/MinKNOWTests/: CMakeLists.txt  minknowtest.cpp  minknowtest.hpp
src/test/MinKNOWTests/data/: test.fasta  test.fastq
src/test/classifyTests/: CMakeLists.txt  classifygtests.hpp  classifytest.cpp
src/test/libBloomFilterTests/: CMakeLists.txt  bloomFilterTest.cpp  mockBloomFilter.hpp
src/test/libConfigReaderTests/: CMakeLists.txt  ConfigReaderTest.cpp  reads_test.fastq
src/test/libConfigReaderTests/testDataConfigReader/: deplete_test1.fasta  target_test2.fasta  test_toml_file.toml
src/test/libIBFTests/: CMakeLists.txt  IBFTest.cpp  createfilter.hpp  ibfconfigtest.hpp  mockIBF.hpp  read.hpp
src/test/libIBFTests/data/: test.fasta  test1.fasta
src/test/libIBFTests/testDataIBF/: ref_1.fasta  ref_2.fasta
src/test/libMinimizerTests/: CMakeLists.txt  minimizerTest.cpp
src/util/: CSVfile.hpp  NanoLiveExceptions.hpp  SafeMap.hpp  SafeQueue.hpp  SafeSet.hpp  StopClock.hpp
testData/: testQueries.fasta
